meta-spire/recipes-extended/iptables/iptables/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --syn -m conntrack --ctstate NEW -j TCP
-A TCP -p tcp --dport 22 -j ACCEPT
-A TCP -p tcp --dport 2005 -j ACCEPT
-A UDP -p udp --dport 123 -j ACCEPT
COMMIT
